# DoxiBox

./: Doxibox-Final-Plan.txt  README.md  pyproject.toml
doxibox/: __init__.py  agent.py  asr.py  audio_input.py  audio_output.py  cli.py  config.py  llm.py  wakeword.py
scripts/: setup.ps1  setup.sh
tests/: test_cli.py
